[0507] 에브리타임 반응형

--- a/everytime/detail.html
+++ b/everytime/detail.html
@@ -10,8 +10,17 @@
   <header>
     <!-- <div class="header"> -->
       <div class="section">
+        <div class="logo2">
+          <div class="logo_img2">
+            <img src="img/aside.title.hamburger.png">
+          </div>
+          <p>비밀게시판</p>
+        </div>
         <div class="logo">
-          <img src="img/nav.logo.png" style="width: 35px;">
+          <div class="logo_img">
+            <img src="img/nav.logo.png">
+          </div>
+          
           <div class="logo_text">
             <div id="logo_text1">함께하는 대학생활</div>
             <div id="logo_text2">에브리타임</div>
@@ -138,7 +147,7 @@
                   </div>
   
                   <div class="post_detail_content">
-                    <p>안녕하세요 덕성여대 멋쟁이사자처럼 12기 아기사자 선발이 완료되었습니다! 최종 선발 결과는 홈페이지에서 확인 가능합니다. ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~`</p>
+                    <p>안녕하세요 덕성여대 멋쟁이사자처럼 12기 아기사자 선발이 완료되었습니다! 최종 선발 결과는 홈페이지에서 확인 가능합니다.</p>
               
                   </div>
   
@@ -182,7 +191,7 @@
               </div>
 
               <div class="post_detail_comment2">
-                <p>우와</p>
+                <p class="comment">우와</p>
                 <p class="light">방금</p>
               </div>
               </div>
@@ -199,6 +208,7 @@
                     <input type="checkbox"> 익명
                   </div>
                 </form>
+
                 <div class="post_detail_write_img">
                   <img src="img/container.articles.write.submit.png">
                 </div>
@@ -207,9 +217,11 @@
 
             </div>
             <div class="post_button">
-              <button class="button" >
+              <button class="button">
                 <div class="list_button">
-                  <div class="button_img"><img src="img/container.articles.pagination.list.png"></div>
+                  <div class="button_img">
+                    <img src="img/container.articles.pagination.list.png">
+                  </div>
                   <p style="color: #F91F15;">글 목록</p>
                 </div>
               </button>
@@ -231,26 +243,26 @@
           <hr color="gainsboro">
 
           <div class="live_post">
-          <span class="span1">네가 깃아 미안해 했잖아?</span><br>
-          <span class="span2">그럼 깃 충돌 이딴거 안생겼어</span><br>
-          <span class="span3">비밀게시판</span>
-          <img src="img/container.articles.vote.png" style="width: 13px;">
-          <span style="color: #F91F15;">10</span>
-          <img src="img/container.articles.comment.png" style="width: 13px;">
-          <span style="color: #05BCBC;">17</span>
-
-        </div>
+            <span class="span1">네가 깃아 미안해 했잖아?</span><br>
+            <span class="span2">그럼 깃 충돌 이딴거 안생겼어</span><br>
+            <span class="span3">비밀게시판</span>
+            <img src="img/container.articles.vote.png" style="width: 13px;">
+            <span style="color: #F91F15;" class="span4">10</span>
+            <img src="img/container.articles.comment.png" style="width: 13px;">
+            <span style="color: #05BCBC;" class="span4">17</span>
+  
+          </div>
 
         <hr color="gainsboro">
 
         <div class="live_post">
           <span class="span1">네가 깃아 미안해 했잖아?</span><br>
-          <span class=span2">그럼 깃 충돌 이딴거 안생겼어</span><br>
+          <span class="span2">그럼 깃 충돌 이딴거 안생겼어</span><br>
           <span class="span3">비밀게시판</span>
           <img src="img/container.articles.vote.png" style="width: 13px;">
-          <span style="color: #F91F15;">10</span>
+          <span style="color: #F91F15;" class="span4">10</span>
           <img src="img/container.articles.comment.png" style="width: 13px;">
-          <span style="color: #05BCBC;">17</span>
+          <span style="color: #05BCBC;" class="span4">17</span>
         </div>
 
       </div>
