--- a/everytime/main.html
+++ b/everytime/main.html
@@ -10,8 +10,17 @@
   <header>
     <!-- <div class="header"> -->
       <div class="section">
+        <div class="logo2">
+          <div class="logo_img2">
+            <img src="img/aside.title.hamburger.png">
+          </div>
+          <p>비밀게시판</p>
+        </div>
         <div class="logo">
-          <img src="img/nav.logo.png" style="width: 35px;">
+          <div class="logo_img">
+            <img src="img/nav.logo.png">
+          </div>
+          
           <div class="logo_text">
             <div id="logo_text1">함께하는 대학생활</div>
             <div id="logo_text2">에브리타임</div>
@@ -37,7 +46,10 @@
           </div>
         </div>
       </div>
+
+      <!-- section -->
     <!-- </div> -->
+
   </header>
 
 
@@ -136,7 +148,7 @@
             </div>
   
             <div class="new_post">
-              <span style="flex:7">새 글을 작성해주세요!</span>
+              <span style="flex:7" class="span4">새 글을 작성해주세요!</span>
               <div>
                 <img src="img/container.write.background.png" style="width: 30px;">
               </div>
@@ -149,9 +161,9 @@
                   <span class="span1">네가 "깃아 미안해" 했잖아?</span><br>
                   <span class="span2">그럼 깃 충돌 이딴거 안생겼어</span><br>
                   <img src="img/container.articles.vote.png" style="width: 13px;">
-                  <span style="color: #F91F15;">10</span>
+                  <span style="color: #F91F15;" class="span4">10</span>
                   <img src="img/container.articles.comment.png" style="width: 13px;">
-                  <span style="color: #05BCBC;">17</span>
+                  <span style="color: #05BCBC;" class="span4">17</span>
                   <span class="span3"> | 10분전 | 익명</span>
                 </div>
                 
@@ -167,9 +179,9 @@
                   <span class="span1">네가 "깃아 미안해" 했잖아?</span><br>
                   <span class="span2">그럼 깃 충돌 이딴거 안생겼어</span><br>
                   <img src="img/container.articles.vote.png" style="width: 13px;">
-                  <span style="color: #F91F15;">10</span>
+                  <span style="color: #F91F15;" class="span4">10</span>
                   <img src="img/container.articles.comment.png" style="width: 13px;">
-                  <span style="color: #05BCBC;">17</span>
+                  <span style="color: #05BCBC;" class="span4">17</span>
                   <span class="span3"> | 10분전 | 익명</span>
                 </div>
                 <div>
@@ -185,9 +197,9 @@
                   <span class="span1">네가 "깃아 미안해" 했잖아?</span><br>
                   <span class="span2">그럼 깃 충돌 이딴거 안생겼어</span><br>
                   <img src="img/container.articles.vote.png" style="width: 13px;">
-                  <span style="color: #F91F15;">10</span>
+                  <span style="color: #F91F15;" class="span4">10</span>
                   <img src="img/container.articles.comment.png" style="width: 13px;">
-                  <span style="color: #05BCBC;">17</span>
+                  <span style="color: #05BCBC;" class="span4">17</span>
                   <span class="span3"> | 10분전 | 익명</span>
                 </div>
                 <div>
@@ -203,9 +215,9 @@
                   <span class="span1">네가 "깃아 미안해" 했잖아?</span><br>
                   <span class="span2">그럼 깃 충돌 이딴거 안생겼어</span><br>
                   <img src="img/container.articles.vote.png" style="width: 13px;">
-                  <span style="color: #F91F15;">10</span>
+                  <span style="color: #F91F15;" class="span4">10</span>
                   <img src="img/container.articles.comment.png" style="width: 13px;">
-                  <span style="color: #05BCBC;">17</span>
+                  <span style="color: #05BCBC;" class="span4">17</span>
                   <span class="span3"> | 10분전 | 익명</span>  
                 </div>
   
@@ -237,9 +249,9 @@
           <span class="span2">그럼 깃 충돌 이딴거 안생겼어</span><br>
           <span class="span3">비밀게시판</span>
           <img src="img/container.articles.vote.png" style="width: 13px;">
-          <span style="color: #F91F15;">10</span>
+          <span style="color: #F91F15;" class="span4">10</span>
           <img src="img/container.articles.comment.png" style="width: 13px;">
-          <span style="color: #05BCBC;">17</span>
+          <span style="color: #05BCBC;" class="span4">17</span>
 
         </div>
 
@@ -247,12 +259,12 @@
 
         <div class="live_post">
           <span class="span1">네가 깃아 미안해 했잖아?</span><br>
-          <span class=span2">그럼 깃 충돌 이딴거 안생겼어</span><br>
+          <span class="span2">그럼 깃 충돌 이딴거 안생겼어</span><br>
           <span class="span3">비밀게시판</span>
           <img src="img/container.articles.vote.png" style="width: 13px;">
-          <span style="color: #F91F15;">10</span>
+          <span style="color: #F91F15;" class="span4">10</span>
           <img src="img/container.articles.comment.png" style="width: 13px;">
-          <span style="color: #05BCBC;">17</span>
+          <span style="color: #05BCBC;" class="span4">17</span>
         </div>
 
       </div>
@@ -269,9 +281,9 @@
           <span class="span2">그럼 깃 충돌 이딴거 안생겼어</span><br>
           <span class="span3">비밀게시판</span>
           <img src="img/container.articles.vote.png" style="width: 13px;">
-          <span style="color: #F91F15;">10</span>
+          <span style="color: #F91F15;" class="span4">10</span>
           <img src="img/container.articles.comment.png" style="width: 13px;">
-          <span style="color: #05BCBC;">17</span>
+          <span style="color: #05BCBC;" class="span4">17</span>
         </div>   
 
         <hr color="gainsboro">
@@ -281,9 +293,9 @@
           <span class="span2">그럼 깃 충돌 이딴거 안생겼어</span><br>
           <span class="span3">비밀게시판</span>
           <img src="img/container.articles.vote.png" style="width: 13px;">
-          <span style="color: #F91F15;">10</span>
+          <span style="color: #F91F15;" class="span4">10</span>
           <img src="img/container.articles.comment.png" style="width: 13px;">
-          <span style="color: #05BCBC;">17</span>
+          <span style="color: #05BCBC;" class="span4">17</span>
         </div>
       </div>
 
