--- a/everytime/signup.html
+++ b/everytime/signup.html
@@ -10,9 +10,9 @@
 
   <div class="signup">
       <div class="text">
-        <p class="bold" style="font-size: 20px;">에브리타임 회원가입</p>
-        <p class="text">에브리타임 계정으로 <span class="bold">캠퍼스픽, 에브리타임</span> 등</p>
-        <p class="text">다양한 대학생 서비스를 모두 이용하실 수 있습니다.</p>
+        <p class="title">에브리타임 회원가입</p>
+        <p class="pText">에브리타임 계정으로 <span class="bold">캠퍼스픽, 에브리타임</span> 등</p>
+        <p class="pText">다양한 대학생 서비스를 모두 이용하실 수 있습니다.</p>
       </div>
       
       <div>
