--- a/everytime/main.html
+++ b/everytime/main.html
@@ -38,92 +38,87 @@
         </div>
       </div>
     </header>
+    <header class="header_hidden">
+      <img alt="햄버거바" src="img/everytime_img/aside.title.hamburger.png" />
+      비밀게시판
+    </header>
     <section class="secBox">
-      <section id="sec1">
-        <div class="posted">
-          <div class="line"></div>
-          <div class="postText">
-            <ul>
-              <li>자유게시판</li>
-              <li>비밀게시판</li>
-              <li>질문게시판</li>
-              <li>졸업생게시판</li>
-              <li>새내기게시판</li>
-              <li>시사·이슈</li>
-              <li>정보게시판</li>
-              <li>홍보게시판</li>
-            </ul>
-          </div>
-          <div class="postText">
-            <ul>
-              <li>동아리·학회</li>
-            </ul>
-          </div>
-          <div class="line"></div>
-          <div class="postText">
-            <ul>
-              <li>취업·진로</li>
-              <li>⭐️👩🏻‍🏫교직이수👩🏻‍🏫⭐️</li>
-              <li>덕성 예비공무원들♡</li>
-              <li>대학원 뿌숭뿌슝🔥...</li>
-              <li>미래의 회계사(CPA)...</li>
-              <li>덕성 로스쿨러들 📚</li>
-            </ul>
-          </div>
-          <div class="line"></div>
-          <div class="postText">
-            <ul>
-              <li>총학생회</li>
-              <li>신문사</li>
-              <li>영자신문사</li>
-              <li>운현방송국</li>
-              <li>대학일자리본부</li>
-              <li>교지편집위원회</li>
-              <li>동아리 연합회</li>
-              <li><span>더보기</span></li>
-            </ul>
-          </div>
-          <div class="line"></div>
-          <div class="postText">
-            <ul>
-              <li>📑덕성여대 경영학...</li>
-              <li>💰두드리는 회계학...</li>
-              <li>국제통상학과</li>
-              <li>👩‍💻디지털소프트웨어...</li>
-              <li>🌕 예대의 밤은 깊어...</li>
-              <li>프리팜/바이오공학과...</li>
-              <li>🧠심리학과 자게🧠</li>
-              <li><span>더보기</span></li>
-            </ul>
-          </div>
-          <div class="line"></div>
-          <div class="postText">
-            <ul>
-              <li>🌺덕성여대 장터🌺</li>
-              <li>♡덕성여대 기숙사♡</li>
-              <li>🌺뻔선뻔후 찾기 프...</li>
-              <li>덕성 연애방</li>
-              <li>덕성여대 자취생 모임</li>
-              <li>주의 없는 게시판</li>
-              <li>퀴어이기 전에 여성</li>
-              <li>💘덕성 파견학생💘</li>
-            </ul>
-          </div>
-          <div class="postText">
-            <ul>
-              <li>덕성여대~수유역 맛...</li>
-              <li>덕성의 아이돌 ❤️</li>
-              <li>다이어덕</li>
-              <li>미팅 모집방</li>
-              <li>덕친소 : 내 덕친은 누...</li>
-              <li>덕성의 국가근로동자...</li>
-              <li>덕성여대 책 거래장터</li>
-              <li><span>더보기</span></li>
-            </ul>
-          </div>
-          <div class="line"></div>
+      <div class="posted">
+        <div class="postText">
+          <ul>
+            <li>자유게시판</li>
+            <li>비밀게시판</li>
+            <li>질문게시판</li>
+            <li>졸업생게시판</li>
+            <li>새내기게시판</li>
+            <li>시사·이슈</li>
+            <li>정보게시판</li>
+            <li>홍보게시판</li>
+          </ul>
         </div>
-      </section>
+        <div class="postText" id="noline">
+            <li>동아리·학회</li>
+          </ul>
+        </div>
+        <div class="postText">
+          <ul>
+            <li>취업·진로</li>
+            <li>⭐️👩🏻‍🏫교직이수👩🏻‍🏫⭐️</li>
+            <li>덕성 예비공무원들♡</li>
+            <li>대학원 뿌숭뿌슝🔥...</li>
+            <li>미래의 회계사(CPA)...</li>
+            <li>덕성 로스쿨러들 📚</li>
+          </ul>
+        </div>
+        <div class="postText">
+          <ul>
+            <li>총학생회</li>
+            <li>신문사</li>
+            <li>영자신문사</li>
+            <li>운현방송국</li>
+            <li>대학일자리본부</li>
+            <li>교지편집위원회</li>
+            <li>동아리 연합회</li>
+            <li><span>더보기</span></li>
+          </ul>
+        </div>
+        <div class="postText">
+          <ul>
+            <li>📑덕성여대 경영학...</li>
+            <li>💰두드리는 회계학...</li>
+            <li>국제통상학과</li>
+            <li>👩‍💻디지털소프트웨어...</li>
+            <li>🌕 예대의 밤은 깊어...</li>
+            <li>프리팜/바이오공학과...</li>
+            <li>🧠심리학과 자게🧠</li>
+            <li><span>더보기</span></li>
+          </ul>
+        </div>
+        <div class="postText">
+          <ul>
+            <li>🌺덕성여대 장터🌺</li>
+            <li>♡덕성여대 기숙사♡</li>
+            <li>🌺뻔선뻔후 찾기 프...</li>
+            <li>덕성 연애방</li>
+            <li>덕성여대 자취생 모임</li>
+            <li>주의 없는 게시판</li>
+            <li>퀴어이기 전에 여성</li>
+            <li>💘덕성 파견학생💘</li>
+          </ul>
+        </div>
+        <div class="postText" id="lastline">
+          <ul>
+            <li>덕성여대~수유역 맛...</li>
+            <li>덕성의 아이돌 ❤️</li>
+            <li>다이어덕</li>
+            <li>미팅 모집방</li>
+            <li>덕친소 : 내 덕친은 누...</li>
+            <li>덕성의 국가근로동자...</li>
+            <li>덕성여대 책 거래장터</li>
+            <li><span>더보기</span></li>
+          </ul>
+        </div>
+      </div>
       <div id="sec2">
         <div class="secret">
           <div class="title">비밀게시판</div>
@@ -154,7 +149,7 @@
             </div>
           </div>
           <div id="border">
-            새 글을 작성해주세요!
+            <div class="new">새 글을 작성해주세요!</div>
             <img
               alt="돋보기"
               src="img/everytime_img/container.write.background.png"
