[0508] 에브리타임 반응형

--- a/everytime/login.html
+++ b/everytime/login.html
@@ -23,10 +23,10 @@
       <a href="signup.html">회원가입</a>
     </div>
     <div class="additional-links">
-      <div class="terms">이용약관</div>
-      <div class="privacy">개인정보처리방침</div>
-      <div class="contact">문의하기</div>
-      <div class="everytime">ⓒ에브리타임</div>
+      <div class="text-g">이용약관</div>
+      <div class="text">개인정보처리방침</div>
+      <div class="text-g">문의하기</div>
+      <div class="text">ⓒ에브리타임</div>
     </div>
   </body>
 </html>
