--- a/everytime/main.html
+++ b/everytime/main.html
@@ -13,6 +13,10 @@
       <div id="logo">
         <img src="img/logo.png" />
       </div>
+      <div class="burger-bar">
+        <img src ="img/aside.title.hamburger.png">
+        <p>비밀게시판</p>
+      </div>
       <div class="nav">
         <ul id="menu">
           <li class="board">게시판</li>
