--- a/everytime/login.html
+++ b/everytime/login.html
@@ -15,9 +15,9 @@
         </div>
         <div class="login">
             <form class="login_form" name="" method="" action="">
-                <input class="login_information" type="text" name="id" placeholder="아이디">
-                <input class="login_information" type="text" name="pw" placeholder="비밀번호">
-                <input class="login_submit" type="submit" value="에브리타임 로그인">
+                <input class="login_information" type="text" id="user_id" name="id" placeholder="아이디">
+                <input class="login_information" type="password" id="user_pw" name="pw" placeholder="비밀번호">
+                <input class="login_submit" type="submit" value="에브리타임 로그인" id="submit">
             </form>
             <p><a href="">회원가입</a></p>
         </div>
@@ -30,6 +30,7 @@
             </ul>
         </footer>
     </section>
+    <script src="JS/script_login.js"></script>
 </body>
 
 </html>
