[05.14] 카운트다운, 에브리타임 발전

--- a/everytime/everytime_second/login.html
+++ b/everytime/everytime_second/login.html
@@ -15,9 +15,19 @@
     <!-- input type 보기-->
     <form>
       <div class="clik">
-        <input type="text" placeholder="LIKELION12" class="idbox" />
-        <input type="password" placeholder="비밀번호" class="passwordbox" />
-        <input type="submit" value="에브리타임 로그인" class="signupbox" />
+        <input id="idbox" type="text" placeholder="LIKELION12" class="idbox" />
+        <input
+          id="passwordbox"
+          type="password"
+          placeholder="비밀번호"
+          class="passwordbox"
+        />
+        <input
+          id="signupbox"
+          type="submit"
+          value="에브리타임 로그인"
+          class="signupbox"
+        />
       </div>
       <!--회원가입-->
       <p class="signup"><a href="./signup.html">회원가입</a></p>
@@ -29,5 +39,6 @@
         <span class="graytxt">© 에브리타임</span>
       </div>
     </form>
+    <script src="login.js"></script>
   </body>
 </html>
