--- a/everytime/everytime_second/signup.html
+++ b/everytime/everytime_second/signup.html
@@ -49,9 +49,10 @@
         </div>
         <!--회원가입 박스-->
         <div class="postbox_box">
-          <input type="submit" value="회원가입" class="postbox" />
+          <input id="postbox" type="submit" value="회원가입" class="postbox" />
         </div>
       </form>
     </div>
+    <script src="signup.js"></script>
   </body>
 </html>
