--- a/everytime/login.html
+++ b/everytime/login.html
@@ -11,9 +11,9 @@
         <img src="./everytime_img/logo.png" alt="에브리타임 로고" class="logo">
         <div class="login">
             <div class="input">
-                <input type="text" value="" placeholder="아이디"/>
-                <input type="password" value="" placeholder="비밀번호"/>
-                <button class="lg"><span>에브리타임 로그인</span></button>
+                <input type="text" value="" id="user_id" placeholder="아이디"/>
+                <input type="password" value="" id="user_pw" placeholder="비밀번호"/>
+                <button type="button" id="user_lg"><span>에브리타임 로그인</span></button>
             </div> 
             <p class="register"><span>회원가입</span></p> 
         </div> 
@@ -24,5 +24,23 @@
             <p class="copyright2">© 에브리타임</p>
         </footer>
     </div>
+    <script>
+        const idForm = document.querySelector('#user_id');
+        const pwForm = document.querySelector('#user_pw');
+        const loginButton = document.querySelector('#user_lg');
+    
+        idForm.addEventListener('keyup', activeEvent);
+        pwForm.addEventListener('keyup', activeEvent);
+    
+        function activeEvent() {
+            if (idForm.value && pwForm.value) {
+                loginButton.classList.add('active');
+                loginButton.disabled = false;
+            } else {
+                loginButton.classList.remove('active');
+                loginButton.disabled = true;
+            }
+        }
+    </script>
 </body>
 </html>
