[0517]회원가입 페이지 발전

--- a/everytime/signup.html
+++ b/everytime/signup.html
@@ -13,19 +13,42 @@
             <p class="title">에브리타임 계정으로 <strong>캠퍼스픽, 에브리타임</strong> 등<br>다양한 대학생 서비스를 모두 이용하실 수 있습니다.</p> 
             <div  class="input">
                 <p class="school"><span>이름</span></p>
-                <input  name="campusName" placeholder="이름을 입력하세요." type="text" class="search"> 
+                <input  name="campusName" id="user_name" placeholder="이름을 입력하세요." type="text" class="search"> 
                 <p class="school"><span>닉네임</span></p>
-                <input  name="campusName" placeholder="닉네임을 입력하세요." type="text" class="search"> 
+                <input  name="campusName" id ="user_nik" placeholder="닉네임을 입력하세요." type="text" class="search"> 
                 <p class="school"><span>이메일</span></p>
-                <input  name="campusName" placeholder="이메일을 입력하세요." type="text" class="search"> 
+                <input  name="campusName" id="user_e" placeholder="이메일을 입력하세요." type="text" class="search"> 
                 <p class="school"><span>비밀번호</span></p>
-                <input  name="campusName" placeholder="숫자/문자 조합. 최소 8자 이상" type="password" class="search"> 
+                <input  name="campusName" id="user_pw" placeholder="숫자/문자 조합. 최소 8자 이상" type="password" class="search"> 
                 <p class="school"><span>비밀번호 재입력</span></p>
-                <input  name="campusName" placeholder="비밀번호를 재입력하세요." type="password" class="search"> 
+                <input  name="campusName" id="user_pw2" placeholder="비밀번호를 재입력하세요." type="password" class="search"> 
             </div>
-            <button class="next"><span>회원가입</span></button>
+            <button class="next" id="signup"><span>회원가입</span></button>
         </section>
     </div>    
+    <script>
+        const nmForm = document.querySelector('#user_name');
+        const nikForm = document.querySelector('#user_nik');
+        const eForm = document.querySelector('#user_e');
+        const pwForm = document.querySelector('#user_pw');
+        const pw2Form = document.querySelector('#user_pw2');
+        const loginButton = document.querySelector('#signup');
+
+        [nmForm, nikForm, eForm, pwForm, pw2Form].forEach(input => {
+            input.addEventListener('input', () => {
+                const allFilled = nmForm.value.trim() && nikForm.value.trim() && eForm.value.trim() && pwForm.value.trim() && pw2Form.value.trim();
+
+                if (allFilled) {
+                    loginButton.style.backgroundColor = "#F91F15";
+                    loginButton.disabled = false;
+                } else {
+                    loginButton.style.backgroundColor = "#c2c2c2";
+                    loginButton.disabled = true; 
+                }
+            });
+        });
+
+    </script>
 </body>
 </html>
 
