--- a/everytime/signup.html
+++ b/everytime/signup.html
@@ -1,41 +1,63 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>에브리타임 회원가입</title>
     <link rel="stylesheet" href="css/signup.css" />
-  </head>
-  <body>
+</head>
+<body>
     <form class="signup-form">
-      <div class="form-title">에브리타임 회원가입</div>
-      <div class="form-text">
-        에브리타임 계정으로 <b>캠퍼스픽, 에브리타임</b> 등 <br />
-        다양한 대학생 서비스를 모두 이용하실 수 있습니다.
-      </div>
-      <div class="input-section">
-        이름<br />
-        <input type="text" placeholder="이름을 입력하세요." />
-      </div>
-      <div class="input-section">
-        닉네임<br />
-        <input type="text" placeholder="닉네임을 입력하세요." />
-      </div>
-      <div class="input-section">
-        이메일<br />
-        <input type="text" placeholder="이메일을 입력하세요." />
-      </div>
-      <div class="input-section">
-        비밀번호<br />
-        <input type="password" placeholder="숫자/문자 조합, 최소 8자 이상" />
-      </div>
-      <div class="input-section">
-        비밀번호 재입력 <br />
-        <input type="password" placeholder="비밀번호를 재입력하세요." />
-      </div>
-      <div class="signup">
-        <button type="submit">회원가입</button>
-      </div>
+        <div class="form-title">에브리타임 회원가입</div>
+        <div class="form-text">
+            에브리타임 계정으로 <b>캠퍼스픽, 에브리타임</b> 등 <br />
+            다양한 대학생 서비스를 모두 이용하실 수 있습니다.
+        </div>
+        <div class="input-section">
+            이름<br />
+            <input type="text" id="name" placeholder="이름을 입력하세요." />
+        </div>
+        <div class="input-section">
+            닉네임<br />
+            <input type="text" id="nickname" placeholder="닉네임을 입력하세요." />
+        </div>
+        <div class="input-section">
+            이메일<br />
+            <input type="text" id="email" placeholder="이메일을 입력하세요." />
+        </div>
+        <div class="input-section">
+            비밀번호<br />
+            <input type="password" id="password" placeholder="숫자/문자 조합, 최소 8자 이상" />
+        </div>
+        <div class="input-section">
+            비밀번호 재입력<br />
+            <input type="password" id="passwordConfirm" placeholder="비밀번호를 재입력하세요." />
+        </div>
+        <div class="signup">
+            <button type="submit" id="signupButton" style="background-color: gray;">회원가입</button>
+        </div>
     </form>
-  </body>
+
+    <script>
+        const name = document.getElementById('name');
+        const nickname = document.getElementById('nickname');
+        const email = document.getElementById('email');
+        const password = document.getElementById('password');
+        const passwordConfirm = document.getElementById('passwordConfirm');
+        const signupButton = document.getElementById('signupButton');
+
+        document.querySelectorAll('.input-section input').forEach(item => {
+            item.addEventListener('input', toggleButton);
+        });
+
+        function toggleButton() {
+            if(name.value && nickname.value && email.value && password.value && passwordConfirm.value) {
+                signupButton.style.backgroundColor = 'rgb(174, 41, 41)';
+            } else {
+                signupButton.style.backgroundColor = 'gray';
+            }
+        }
+    </script>
+</body>
 </html>
+
