[05/19] 카운트 다운, 에브리타임 발전

--- a/everytime/login.html
+++ b/everytime/login.html
@@ -14,15 +14,11 @@
 
       <section class="secBox">
         <section class="sec1">
-          <div class="id">
-            <input type="text" id="text" placeholder="LIKELION12"></input>
-          </div>
-          <div class="password">
-            <input type="password" id="text" placeholder="********"></input>
-          </div>
-          <div class="login">
-            <input type="submit" id="login-text" value="에브리타임 로그인"></input>
-          </div>
+          <form>
+            <input type="text" class="id" placeholder="아이디"></input>
+            <input type="password" class="password" placeholder="비밀번호"></input>
+            <input type="submit" class="login" value="에브리타임 로그인"></input>
+          </form>
         </section>
         <section class="sec2">
           <div class="signup">
@@ -40,5 +36,6 @@
         </ul>
       </footer>
     </div>
+    <script src="./js/login.js"></script>
   </body>
 </html>
