--- a/everytime/signup.html
+++ b/everytime/signup.html
@@ -17,30 +17,33 @@
         </h4>
       </header>
       <section class="secBox">
+        <form>
         <div class="box">
           <p class="title">이름</p>
-          <input type="text" class="content" placeholder="이름을 입력하세요."></input>
+          <input type="text" class="name" placeholder="이름을 입력하세요."></input>
         </div>
         <div class="box">
           <p class="title">닉네임</p>
-          <input type="text" class="content" placeholder="닉네임을 입력하세요."></input>
+          <input type="text" class="id" placeholder="닉네임을 입력하세요."></input>
         </div>
         <div class="box">
           <p class="title">이메일</p>
-          <input type="email" class="content" placeholder="이메일을 입력하세요."></input>
+          <input type="email" class="email" placeholder="이메일을 입력하세요."></input>
         </div>
         <div class="box">
           <p class="title">비밀번호</p>
-          <input type="password" class="content" placeholder="숫자/문자 조합, 최소 8자 이상"></input>
+          <input type="password" class="password" placeholder="숫자/문자 조합, 최소 8자 이상"></input>
         </div>
         <div class="box">
           <p class="title">비밀번호 재입력</p>
-          <input type="password" class="content" placeholder="비밀번호를 재입력하세요."></input>
+          <input type="password" class="password2" placeholder="비밀번호를 재입력하세요."></input>
         </div>
         <div class="signup">
           <input type="submit" value="회원가입" class="submit"></input>
         </div>
+      </form>
       </section>
-    </div>
+
+  <script src="./js/signup.js"></script>
   </body>
 </html>
