[0519]카운트다운, 에브리타임 발전

--- a/everytime/login.html
+++ b/everytime/login.html
@@ -11,9 +11,9 @@
         <div class="logo"><img src="img/logo.png"></div>
             <form method="post">
                 <div class="form">
-                    <input name="id" type="text" maxlength="20" placeholder="아이디">
-                    <input name="password" type="text" maxlength="20" placeholder="비밀번호">
-                    <input class="login" type="submit" value="에브리타임 로그인">
+                    <input id = "notNull1" name="id" type="text" maxlength="20" placeholder="아이디">
+                    <input id = "notNull2" name="password" type="password" maxlength="20" placeholder="비밀번호">
+                    <input id="login" type="submit" value="에브리타임 로그인">
                 </div>
                 <div class="optoins">
                     <label class="check">
@@ -31,5 +31,6 @@
                 </footer>
             </form>
     </div>
+    <script src="./js/login.js"></script>
 </body>
 </html>
