--- a/everytime/signup.html
+++ b/everytime/signup.html
@@ -14,29 +14,29 @@
         <form>
             <div class="input">
                 <label>이름</label>
-                <input name="name" type="text" maxlength="20" placeholder="이름을 입력하세요.">
+                <input id="label1" name="name" type="text" maxlength="20" placeholder="이름을 입력하세요.">
             </div>
             <div class="input">
                 <label>닉네임</label>
-                <input name="name" type="text" maxlength="20" placeholder="닉네임을 입력하세요.">
+                <input id="label2" name="name" type="text" maxlength="20" placeholder="닉네임을 입력하세요.">
             </div>
             <div class="input">
                 <label>이메일</label>
-                <input name="name" type="text" maxlength="20" placeholder="이메일을 입력하세요.">
+                <input id="label3" name="name" type="text" maxlength="20" placeholder="이메일을 입력하세요.">
             </div>
             <div class="input">
                 <label>비밀번호</label>
-                <input name="name" type="text" maxlength="20" placeholder="숫자/문자 조합, 최소 8자 이상">
+                <input id="label4" name="name" type="text" maxlength="20" placeholder="숫자/문자 조합, 최소 8자 이상">
             </div>
             <div class="input">
                 <label>비밀번호 재입력</label>
-                <input name="name" type="text" maxlength="20" placeholder="비밀번호를 재입력하세요.">
+                <input id="label5" name="name" type="text" maxlength="20" placeholder="비밀번호를 재입력하세요.">
             </div>
-            <div class="submit">
-                회원가입
+            <input id="submit" type="submit" value="회원가입">
             </div>
         </form>
         </section>
     </form>
+    <script src="/Users/choeyun-yeong/Desktop/FE_hw/everytime/js/signup.js"></script>
 </body>
 </html>
