--- a/everytime/login.html
+++ b/everytime/login.html
@@ -14,9 +14,9 @@
     </div>
     <form>
     
-      <input type="text" placeholder="아이디" class="idBox"><br>
-      <input type="password" placeholder="비밀번호" class="idBox"><br>
-      <input type="submit" value="에브리타임 로그인" class="idBox">
+      <input type="text" placeholder="아이디" id="id"><br>
+      <input type="password" placeholder="비밀번호" id="password"><br>
+      <input type="submit" value="에브리타임 로그인" id="loginBtn">
     </form>
   
     <p><a href="#">회원가입</a></p>
@@ -32,6 +32,6 @@
     
   </div>
 
-  
+  <script src="js/login.js"></script>
 </body>
 </html>
