--- a/everytime/login.html
+++ b/everytime/login.html
@@ -20,23 +20,15 @@
     <div class="forcenter">
         <div class="middleboxall">
             <div class="idboxall">
-                <input type="text" class="idbox">
+                <input type="text" class="idbox" placeholder="아이디" >
 
-                <input type="password" class="idbox">
+                <input type="password" class="idbox" placeholder="비밀번호" ocnhange="idFunction">
             </div>
 
 
             <div class="redbox">
                 <div class="loginkor">
-                    <input type="submit" value="에브리타임 로그인" style="
-                    background: rgb(222, 55, 55);
-                    height: 35px;
-                    
-                    border-radius: 10px;
-                    border: 2px solid rgb(222, 55, 55);
-                    /* margin-top: 5px; */
-                    color: white;
-                ">
+                    <input type="submit" value="에브리타임 로그인" id="login">
                 </div>
             </div>
         </div>
@@ -61,5 +53,9 @@
     </div>
 </div>
 </form>
+
+
+<script src="login.js"></script>
+
 </body>
 </html>
