--- a/everytime/signup.html
+++ b/everytime/signup.html
@@ -89,11 +89,15 @@
         <div class="bottom">
             <div class="#">
                 <div class="joinkor">
-                    <input type="submit" class="redbox" value="회원가입">
+                    <input type="submit" class="greybox" value="회원가입">
                 </div>
             </div>
         </div>
     </div>
-</form> 
+</form>
+
+<script src="signup.js"></script>
+
+
 </body>
 </html>
