[0527] JS 시험 채점 결과

--- a/Js test/Js.html
+++ b/Js test/Js.html
@@ -7,11 +7,11 @@
   </head>
   <body>
     <script>
-    function getSecondsToday(){
-        const date = getTime(2024,05,27)
-    alert(date);
-}
-getSecondsToday();
+      function getSecondsToday() {
+        const date = getTime(2024, 05, 27);
+        alert(date);
+      }
+      getSecondsToday();
     </script>
   </body>
 </html>
